Complete KYC Initial Submission
